--- a/src/Pages/LandingPage/Pages/ServicesPage/Pages/FlightBooking/Pages/FlightBookingForm/styles.css
+++ b/src/Pages/LandingPage/Pages/ServicesPage/Pages/FlightBooking/Pages/FlightBookingForm/styles.css
@@ -15,6 +15,7 @@
 }
 .flightBookingFormAddBaseContainer{
     display: flex;
+    justify-content: center;
     justify-content: space-between;
 }
 .flightBookingFormGridBaseContainer{
@@ -22,6 +23,9 @@
     align-items: flex-end;
     grid-template-columns: repeat(4, 2fr);
     gap: 30px;
+}
+.flightBookingAddMembersBaseContainer {
+
 }
 .flighBookingFormGrid{
     display: flex;
